[gd_scene load_steps=3 format=3 uid="uid://bb6u41oocrq0l"]

[ext_resource type="Script" uid="uid://dfee3cx8jac6e" path="res://Scripts/control.gd" id="1_hbxdl"]
[ext_resource type="FontFile" uid="uid://c0yopc1wdpo3t" path="res://Assets/PressStart2P-Regular.ttf" id="2_fxa43"]

[node name="Login" type="Node2D"]

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -326.0
offset_top = -227.0
offset_right = 1408.0
offset_bottom = 896.0
color = Color(0.117647, 0.160784, 0.278431, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_hbxdl")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = -4.0
offset_right = 1186.0
offset_bottom = 650.0
color = Color(0.117647, 0.160784, 0.278431, 1)

[node name="LineEdit" type="LineEdit" parent="Control/ColorRect" node_paths=PackedStringArray("shortcut_context")]
layout_mode = 0
offset_left = 198.0
offset_top = 276.0
offset_right = 448.0
offset_bottom = 311.0
shortcut_context = NodePath(".")
theme_override_fonts/font = ExtResource("2_fxa43")
alignment = 1

[node name="Button" type="Button" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 486.0
offset_top = 412.0
offset_right = 638.0
offset_bottom = 443.0
localize_numeral_system = false
theme_override_fonts/font = ExtResource("2_fxa43")
text = "Continuar"

[node name="Label" type="Label" parent="Control/ColorRect"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 3.425
anchor_top = 5.4
anchor_right = 12.975
anchor_bottom = 6.4
offset_left = -3843.5
offset_top = -3295.6
offset_right = -3953.5
offset_bottom = -3295.6
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_fxa43")
text = "Nombre de usuario
"

[node name="Label2" type="Label" parent="Control/ColorRect"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = -68.5875
anchor_top = -43.463
anchor_right = -61.382
anchor_bottom = -41.632
offset_left = 81579.3
offset_top = 28660.8
offset_right = 81563.0
offset_bottom = 28631.6
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_fxa43")
text = "Contraseña"
metadata/_edit_use_anchors_ = true

[node name="LineEdit2" type="LineEdit" parent="Control/ColorRect"]
layout_mode = 2
offset_left = 646.0
offset_top = 276.0
offset_right = 896.0
offset_bottom = 311.0
theme_override_fonts/font = ExtResource("2_fxa43")
secret = true

[node name="Button2" type="Button" parent="Control/ColorRect"]
layout_mode = 2
offset_left = 446.0
offset_top = 548.0
offset_right = 678.0
offset_bottom = 579.0
localize_numeral_system = false
theme_override_fonts/font = ExtResource("2_fxa43")
text = "Iniciar sesión"

[node name="MensajeLabel" type="Label" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 15.0
offset_top = 481.0
offset_right = 1126.0
offset_bottom = 504.0
theme_override_fonts/font = ExtResource("2_fxa43")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label3" type="Label" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 9.0
offset_top = 87.0
offset_right = 1120.0
offset_bottom = 142.0
theme_override_fonts/font = ExtResource("2_fxa43")
text = "Inicio de sesión"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 581.0
offset_right = 1127.0
offset_bottom = 604.0
theme_override_fonts/font = ExtResource("2_fxa43")
text = "Pulsar para cambiar a registrarse"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Control/ColorRect/Button" to="Control" method="_on_button_pressed"]
[connection signal="pressed" from="Control/ColorRect/Button2" to="Control" method="_on_button_2_pressed"]
